--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "sqlite3": "^5.1.7"
   }
 }
